[tool.poetry]
name = "travel-planner-bot"
version = "0.1.0"
description = "Telegram bot for travel planning"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
requests = "^2.31.0"
openai = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"